@@ -1,0 +1,64 @@
+<?xml version="1.0"?>
+<page xmlns="http://projectmallard.org/1.0/"
+      type="topic"
+      style="function"
+      xmlns:api="http://projectmallard.org/experimental/api/"
+      xmlns:ui="http://projectmallard.org/experimental/ui/"
+      id="mongoc_uri_get_mechanism_properties">
+  <info>
+    <link type="guide" xref="mongoc_uri_t" group="function"/>
+  </info>
+  <title>mongoc_uri_get_mechanism_properties()</title>
+
+  <section id="synopsis">
+    <title>Synopsis</title>
+    <synopsis><code mime="text/x-csrc"><![CDATA[bool
+mongoc_uri_get_mechanism_properties (const mongoc_uri_t *uri,
+                                     bson_t             *properties /* OUT */);]]>
+    </code></synopsis>
+  </section>
+
+  <section id="parameters">
+    <title>Parameters</title>
+    <table>
+      <tr><td><p>uri</p></td><td><p>A <code xref="mongoc_uri_t">mongoc_uri_t</code>.</p></td></tr>
+      <tr><td><p>properties</p></td><td><p>An uninitialized <code xref="bson:bson_t">bson_t</code>.</p></td></tr>
+    </table>
+  </section>
+
+  <section id="description">
+    <title>Description</title>
+    <p>Fetches the "authMechanismProperties" options set on this <code xref="mongoc_uri_t">mongoc_uri_t</code>. The out-parameter <code>properties</code> should be an uninitialized, stack-allocated <code xref="bson:bson_t">bson_t</code>. It is statically initialized with <code xref="bson:bson_init_static">bson_init_static</code> to point to the internal data of <code>uri</code>, so its contents must not be modified and it becomes invalid after <code>uri</code> is destroyed.</p>
+  </section>
+
+  <section id="return">
+    <title>Returns</title>
+    <p>If no "authMechanismProperties" have been set on <code>uri</code>, this functions returns false and <code>properties</code> remains uninitialized.</p>
+  </section>
+
+  <section id="example">
+    <title>Example</title>
+
+    <synopsis><code mime="text/x-csrc"><![CDATA[mongoc_uri_t *uri;
+bson_t props;
+
+uri = mongoc_uri_new ("mongodb://user%40DOMAIN.COM:password@localhost/?authMechanism=GSSAPI"
+                      "&authMechanismProperties=SERVICE_NAME:other,CANONICALIZE_HOST_NAME:true");
+
+if (mongoc_uri_get_mechanism_properties (uri, &props)) {
+    char *json = bson_as_json (&props, NULL);
+    printf ("%s\n", json);
+    bson_free (json);
+} else {
+    printf ("No authMechanismProperties.\n");
+}
+]]></code></synopsis>
+    <p>This code produces the output:</p>
+    <screen><output style="prompt">{ "SERVICE_NAME" : "other", "CANONICALIZE_HOST_NAME" : "true" }</output></screen>
+  </section>
+
+  <section id="seealso">
+    <title>See Also</title>
+    <p><link xref="authentication#kerberos">GSSAPI (Kerberos) Authentication</link> and <code xref="mongoc_uri_set_mechanism_properties">mongoc_uri_set_mechanism_properties</code></p>
+  </section>
+</page>
