@@ -1,0 +1,62 @@
+<?xml version="1.0"?>
+<page xmlns="http://projectmallard.org/1.0/"
+      type="topic"
+      style="function"
+      xmlns:api="http://projectmallard.org/experimental/api/"
+      xmlns:ui="http://projectmallard.org/experimental/ui/"
+      id="mongoc_uri_set_mechanism_properties">
+  <info>
+    <link type="guide" xref="mongoc_uri_t" group="function"/>
+  </info>
+  <title>mongoc_uri_set_mechanism_properties()</title>
+
+  <section id="synopsis">
+    <title>Synopsis</title>
+    <synopsis><code mime="text/x-csrc"><![CDATA[bool
+mongoc_uri_set_mechanism_properties (mongoc_uri_t *uri,
+                                     const bson_t *properties);]]>
+    </code></synopsis>
+  </section>
+
+  <section id="parameters">
+    <title>Parameters</title>
+    <table>
+      <tr><td><p>uri</p></td><td><p>A <code xref="mongoc_uri_t">mongoc_uri_t</code>.</p></td></tr>
+      <tr><td><p>properties</p></td><td><p>A <code xref="bson:bson_t">bson_t</code> .</p></td></tr>
+    </table>
+  </section>
+
+  <section id="description">
+    <title>Description</title>
+    <p>Replaces all the options in URI's "authMechanismProperties" after the URI has been parsed from a string.</p>
+  </section>
+
+  <section id="return">
+    <title>Returns</title>
+    <p>Returns false if the option cannot be set, for example if <code>properties</code> is not valid BSON data.</p>
+  </section>
+
+  <section id="example">
+    <title>Example</title>
+
+    <synopsis><code mime="text/x-csrc"><![CDATA[mongoc_uri_t *uri;
+bson_t props = BSON_INITIALIZER;
+
+uri = mongoc_uri_new ("mongodb://user%40DOMAIN.COM:password@localhost/?authMechanism=GSSAPI"
+                      "&authMechanismProperties=SERVICE_NAME:other,CANONICALIZE_HOST_NAME:true");
+
+/* replace all options: replace service name "other" with "my_service", unset
+ * "CANONICALIZE_HOST_NAME" and accept its default.
+ */
+BSON_APPEND_UTF8 (&props, "SERVICE_NAME", "my_service");
+mongoc_uri_set_mechanism_properties (uri, &props);
+
+bson_destroy (&props);
+]]></code></synopsis>
+  </section>
+
+  <section id="seealso">
+    <title>See Also</title>
+    <p><link xref="authentication#kerberos">GSSAPI (Kerberos) Authentication</link> and <code xref="mongoc_uri_get_mechanism_properties">mongoc_uri_get_mechanism_properties</code></p>
+  </section>
+</page>
