@@ -1,3 +1,11 @@
+Next Release
+============
+
+New features and bug fixes:
+  * New function mongoc_uri_set_mechanism_properties to replace all the
+    authMechanismProperties on an existing URI.
+  * mongoc_uri_get_mechanism_properties asserts its inputs are not NULL.
+
 mongo-c-driver 1.5.0
 ====================
 
